<resources>
    <string name="app_name">Dailykit</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="login_name">Name</string>
    <string name="password_name">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="view_menu">View Menu</string>
    <string name="weight_measure">g</string>
    <string name="repack_ingredient">Repack Ingredient</string>
    <string name="reprint_label">Reprint Label</string>
    <string name="dashboard">Dashboard >   </string>
    <string name="ingredient_detail">Ingredient Detail</string>
    <string name="weight_message">Add 0 gm more</string>
    <string name="title_activity_setting">Settings</string>
    <string name="weight_accuracy">Weight Accuracy</string>
    <string name="inventory">Inventory</string>
    <string name="planning">Planning</string>
    <string name="real_time">Real Time</string>
    <string name="dailykit">DAILYKIT</string>
    <string name="dumy_name">John</string>
    <string name="quick_control">Quick Controls</string>
    <string name="dummy_cardview_name">Salt - 5 gms</string>
    <string name="dummy_weight">0.00 gms</string>
    <string name="accurate">Accurate</string>
    <string name="dummy_printing_label">Printing label in 2 seconds</string>
    <string name="active_order">Active Order</string>
    <string name="items_to_pack">Items to Pack</string>
    <string name="ingredient">Ingredient</string>
    <string name="weight">Weight</string>
    <string name="options">Options</string>
    <string name="packed_ingredients">Packed Ingredients</string>
    <string name="no_ingredient_selected">No Ingredient Selected</string>
    <string name="ready">Ready</string>
    <string name="start_weighing">Start Weighing</string>
    <string name="printing_time">Printing Time</string>
    <string name="setting">Setting</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="simulator">Simulator</string>
    <string name="manual_weight_entry">Manual Weight Entry</string>
    <string name="printer_test">Printer Test</string>
    <string name="no_item_selected">No Item Selected</string>
    <string name="no_order_selected">No Order Selected</string>
    <string name="number">No.</string>
    <string name="active_ingredient">Active Ingredient</string>
    <string name="dummy_processing">BOILED AND PUREE</string>
    <string name="dummy_packing_value">1/4</string>
    <string name="dummy_ingredient">GHEE</string>
    <string name="item_name">Item Name</string>
    <string name="order_id">Order ID</string>
    <string name="processing">Processing</string>
</resources>
