<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.SettingActivity"
    tools:showIn="@layout/activity_setting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.groctaurant.groctaurant.CustomView.FuturaMediumTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight_accuracy"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/weight_accuracy_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:backgroundTint="@color/white"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.groctaurant.groctaurant.CustomView.FuturaMediumTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/printing_time"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/printing_time_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:backgroundTint="@color/white"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <com.groctaurant.groctaurant.CustomView.FuturaMediumTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/simulator"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <Switch
                    android:id="@+id/simulator_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:onClick="onClick"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <com.groctaurant.groctaurant.CustomView.FuturaMediumTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/manual_weight_entry"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <Switch
                    android:id="@+id/manual_set_weight_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:onClick="onClick"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <com.groctaurant.groctaurant.CustomView.FuturaMediumTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/printer_test"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <Switch
                    android:id="@+id/print_test_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:onClick="onClick"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/save_setting"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="SAVE"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</LinearLayout>