<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/planning_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    android:background="@drawable/round_transparent_button">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:weightSum="7">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4">
                <TextView
                    android:id="@+id/ingredient_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="GHEE"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">
                <TextView
                    android:id="@+id/ingredient_total_weight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="1.5 kg"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:weightSum="7">

            <com.groctaurant.groctaurant.CustomView.FuturaMediumTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:alpha="0.4"
                android:gravity="center"
                android:text="@string/number"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <com.groctaurant.groctaurant.CustomView.FuturaMediumTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:alpha="0.4"
                android:gravity="center"
                android:text="@string/processing"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <com.groctaurant.groctaurant.CustomView.FuturaMediumTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:alpha="0.4"
                android:gravity="center"
                android:text="@string/weight"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/planning_process_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadeScrollbars="false"
                android:focusable="true"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:scrollbars="none">

            </android.support.v7.widget.RecyclerView>
        </FrameLayout>
    </LinearLayout>


</LinearLayout>